javascript -> libs in simple-template

--- a/template/simple-template.tmpl
+++ b/template/simple-template.tmpl
@@ -10,7 +10,7 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.1/underscore-min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.9/backbone-min.js"></script>
     <script language="JavaScript">
-      <!-- TMPL_VAR javascript -->
+      <!-- TMPL_VAR libs -->
     </script>
   </body>
 </html>
