--- a/template/simple-template.tmpl
+++ b/template/simple-template.tmpl
@@ -9,8 +9,14 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.1/underscore-min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.9/backbone-min.js"></script>
-    <script language="JavaScript">
-      <!-- TMPL_VAR libs -->
-    </script>
+    
+    
+    <!-- JavaScript Libraries -->
+    <!-- TMPL_LOOP libs -->
+    <script src="<!--TMPL_VAR url -->"></script>
+    <!-- /TMPL_LOOP -->
+
+    <!-- JavaScript -->
+    <script><!--TMPL_VAR javascript --></script>
   </body>
 </html>
