--- a/template/simple-template.tmpl
+++ b/template/simple-template.tmpl
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title><!-- TMPL_VAR title --></title>
+    <!-- CSS Files -->
+    <!-- TMPL_LOOP css -->
+    <link href="<!-- TMPL_VAR url -->" rel="stylesheet">
+    <!-- /TMPL_LOOP -->
   </head>
   <body>
     <div id="main">
